Add roll button and implement Pokémon fetching functionality; update styles for improved layout

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             </div>
             <div class="controls">
                 
+                <div class="roll_btn js-roll-btn">Roll</div>
                 <div class="action-buttons">
                     <button class="action-btn a-btn">CHOOSE FOR A</button>
                     <button class="action-btn b-btn">CHOOSE FOR B</button>
                 </div>
-                <button class="fight action-btn">Fight</button>
+
+                <button class="battle action-btn">Battle</button>
             </div>
         </div>
         
@@ -66,10 +68,12 @@
                 <div class="grid-item"></div>
                 <div class="grid-item"></div>
                 <div class="grid-item"></div>
-                <div id="lastSec" class="grid-item"></div>
-                <div id="last" class="grid-item"></div>
+                <div class="grid-item"></div>
+                <div class="grid-item"></div>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
