--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,30 +9,39 @@
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
     <div class="pokedex-container">
         <!-- Left Panel - Gameboy Display -->
         <div class="gameboy-panel">
             <div class="screen-container">
                 <div class="screen">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="" class="pokemon-sprite" />
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt=""
+                        class="pokemon-sprite" />
                 </div>
                 <div class="screen-bottom">
                     <div class="light"></div>
                 </div>
             </div>
             <div class="controls">
-                <div class="roll_btn js-roll-btn">Roll</div>
+                <div class="roll_btn js-roll-btn">
+                    <div class="middle-line"></div>
+                    <span></span>
+                </div>
                 <div class="button-container">
-                    <div class="action-buttons">
-                        <button class="action-btn a-btn">A</button>
-                        <button class="action-btn b-btn">B</button>
-                    </div>
-                    <button class="battle action-btn">Battle</button>
+                    <button class="battle">Battle</button>
                 </div>
             </div>
         </div>
-        
+
+        <!-- Animated connecting elements -->
+        <div class="connection-line"></div>
+        <div class="energy-particle"></div>
+        <div class="energy-particle"></div>
+        <div class="energy-particle"></div>
+        <div class="energy-particle"></div>
+        <div class="energy-particle"></div>
+
         <!-- Right Panel - Pokemon Grid -->
         <div class="grid-panel">
             <div class="grid-header">
@@ -44,31 +54,7 @@
             </div>
             <div class="grid-content">
                 <div class="pokemon-grid">
-                    <!-- Placeholder Grid Items -->
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
+                    <!-- Here Grid Items -->
                 </div>
             </div>
         </div>
@@ -76,4 +62,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
