Add battle and separate home page with corresponding styles and scripts; include images for UI elements

--- a/homePage.html
+++ b/homePage.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Pokedex Interface</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="pokeball.webp" type="image/x-icon">
-    <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="./styles/homeStyle1.css">
+    <link rel="stylesheet" href="./styles/homeStyle2.css">
 </head>
 
 <body>
@@ -29,7 +29,9 @@
                     <span></span>
                 </div>
                 <div class="button-container">
-                    <a class="battle" href="./battlePage.html">Battle</a>
+                    <a class="battle" href="./battlePage.html">
+                        Battle
+                    </a>
                 </div>
             </div>
         </div>
@@ -48,7 +50,7 @@
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Search Pokemon...">
                     <button class="search-btn">
-                        <img src="searchIcon.png" alt="Search" class="search-icon">
+                        <img src="./Images/searchIcon.png" alt="Search" class="search-icon">
                     </button>
                 </div>
             </div>
@@ -60,7 +62,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./scripts/homeScript.js"></script>
 </body>
 
 </html>
