Update battle page styles

--- a/battlePage.html
+++ b/battlePage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle</title>
     <link rel="stylesheet" href="./styles/battlePage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,20 +20,20 @@
             &nbsp;
         </div>
 
-            <div class="selectPokemons">
-                &nbsp;
-                <div class="selectLeftPokemon">
-                    .
-                </div>
-
-                <div class="versus">
-                    VS
-                </div>
-
-                <div class="selectRightPokemon">
-                    .
-                </div>
+        <div class="selectPokemons">
+            &nbsp;
+            <div class="selectLeftPokemon">
+                
             </div>
+
+            <div class="versus">
+                <span>VS</span>
+            </div>
+
+            <div class="selectRightPokemon">
+                
+            </div>
+        </div>
     </div>
 </body>
 
