add serach functionality for search pokemons(on homepage)

--- a/homePage.html
+++ b/homePage.html
@@ -48,7 +48,7 @@
         <div class="grid-panel">
             <div class="grid-header">
                 <div class="search-container">
-                    <input type="text" class="search-input" placeholder="Search Pokemon...">
+                    <input id="searchInput" type="text" class="search-input" placeholder="Search Pokemon...">
                     <button class="search-btn">
                         <img src="./Images/searchIcon.png" alt="Search" class="search-icon">
                     </button>
