--- a/html/homePage.html
+++ b/html/homePage.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="shortcut icon" href="pokeball.webp" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/homeStyle1.css">
-    <link rel="stylesheet" href="./styles/homeStyle2.css">
+    <link rel="stylesheet" href="../styles/homeStyle1.css">
+    <link rel="stylesheet" href="../styles/homeStyle2.css">
 </head>
 
 <body>
